--- a/src/components/calculator/GoldCalculator.css
+++ b/src/components/calculator/GoldCalculator.css
@@ -17,3 +17,12 @@
     padding: 8px;
     border-bottom: 1px solid #ddd;
   }
+
+  .cal{
+    background: rgba(255, 255, 255, 0.55);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px #4747470b;
+    backdrop-filter: blur(7.1px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    @apply border-4 border-gray-50 shrink-0 h-[85%] w-[30%] rounded-3xl py-20 px-7 min-w-max;
+}
